infrastructure/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: industrynight
  labels:
    name: industrynight
    environment: production
