infrastructure/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: industrynight-api
  namespace: __NAMESPACE__
  labels:
    app: industrynight-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: industrynight-api
